DONE: services horizontal scroll slowed down fix

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,10 @@
   overflow-x: hidden;
 }
 
+.stop-scrolling {
+  height: 100vh;
+  overflow: hidden;
+}
 #root-body-hidden {
   height: 100vh;
   overflow-x: hidden;
@@ -217,4 +221,11 @@
 
 .chatscroll::-webkit-scrollbar-track {
   background-color: #000000;
+}
+
+#container,
+#container2,
+#container3,
+#container4 {
+  transition: transform 1s ease;
 }
